cambios en interfaz y pagina login

--- a/Interfaz pagina web/GESOC_Menu.html
+++ b/Interfaz pagina web/GESOC_Menu.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://startbootstrap.com/templates/agency/font-awesome-4.1.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 </head>
     
 <body id="page-top" class="index" data-pinterest-extension-installed="cr1.3.4">
@@ -33,7 +34,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="">
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Servicios</a>
                     </li>
                     <li class="">
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -42,7 +43,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li class="">
-                        <a class="page-scroll" href="#team">Grupo</a>
+                        <a class="page-scroll" href="#team">Equipo</a>
                     </li>
                     <li class="">
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -60,50 +61,52 @@
             <div class="intro-text">
                 <div class="intro-lead-in">GESTION DE PROYECTOS SOCIALES</div>
                 <div class="intro-heading"> Un sistema ERP correcto es el medio para alcanzar sus objetivos de negocio</div>
-                <a href="#services" class="page-scroll btn btn-xl">Login</a>
+                <a href="./GESOC_Login.html"class="page-scroll btn btn-xl">Inicia Sesión</a>
+ >
             </div>
         </div>
     </header>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="Servicios">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Servicios</h2>
+                    <h3 class="section-subheading text-muted">Descubre los servicios que provee GESOC.</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="glyphicon glyphicon-tree-conifer"></i>
+                        <i class="glyphicon glyphicon-star"></i>
                     </span>
-                    <h4 class="service-heading">Here is a pokok</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Egresos e ingresos</h4>
+                    <p class="text-muted">GESOC te permite cargar operaciones de egresos y de ingresos emitidas por tu empresa. Además, podrás asociarlos si fuese necesario.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="glyphicon glyphicon-heart"></i>
+                        <i class="glyphicon glyphicon-star"></i>
                     </span>
-                    <h4 class="service-heading">Here's a heart</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Categorías</h4>
+                    <p class="text-muted">Con GESOC podrás asociar egresos y presupuestos a categorías específicas, además de poder agregar la cantidad de categorías que consideres necesarias para la administración de tus productos.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="glyphicon glyphicon-tint"></i>
+                        <i class="glyphicon glyphicon-star"></i>
                     </span>
-                    <h4 class="service-heading">Waterfall maybe?</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Bandeja de mensajes</h4>
+                    <p class="text-muted">Con la suscripción a compras específicas, podrás contar con una bandeja de mensajes en la cual estarán dichos mensajes correspondientes a las actualizaciones de las mismas.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Portfolio Grid Section -->
+  <!-- Portfolio Grid Section -->
+  <!--  
     <section id="portfolio" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -200,8 +203,9 @@
             </div>
         </div>
     </section>
-
+-->
     <!-- About Section -->
+    <!--
     <section id="about">
         <div class="container">
             <div class="row">
@@ -281,7 +285,7 @@
             </div>
         </div>
     </section>
-
+-->
     <!-- Team Section -->
     <section id="team" class="bg-light-gray">
         <div class="container">
