--- a/Interfaz pagina web/GESOC_Menu_Logueado.html
+++ b/Interfaz pagina web/GESOC_Menu_Logueado.html
@@ -18,7 +18,7 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
-            <a class="navbar-brand page-scroll" href="./GESOC_Menu.html">GESOC</a>
+            <a class="navbar-brand page-scroll" href="#page-top">GESOC</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
