--- a/Interfaz pagina web/GESOC_ListadoxCategoria.html
+++ b/Interfaz pagina web/GESOC_ListadoxCategoria.html
@@ -2,31 +2,40 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Filter Me</title>
+  <title>GESOC - Visualizar Ingresos y Egresos por Categoria</title>
   <link rel="stylesheet" href="./GESOC_ListadoxCategoria.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <!-- Note that the id of app is what our Vue JS instance hooks onto -->
+
+<nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
+  <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header page-scroll">
+          <a class="navbar-brand page-scroll" href="./GESOC_Menu_Logueado.html">GESOC</a>
+      </div>
+</nav>
+
 <main id="app">
-  <h1 class="app-heading">Vue Filter App</h1>
+  <h1 class="app-heading">Visualizar Ingresos y Egresos por Categoria</h1>
 
   <section class="app-filters">
     <!-- Look at binding for more info on form inputs -->
     <!-- https://vuejs.org/v2/guide/forms.html -->
-    <input v-model="keywords" class="filter input--search" type="text" name="search" placeholder="Search titles">
+    <input v-model="keywords" class="filter input--search" type="text" name="search" placeholder="Buscar Ingresos/Egresos">
 
     <div class="filter select-wrapper">
       <select v-model="category" v-model="category">
-        <option value="all">All Categories</option>
+        <option value="all">Todas las Categorias</option>
         <option v-for="cat in categories" :value="cat.category_url_title" v-html="cat.category_name"></option>
       </select>
     </div>
     <!-- We use event handling inline, and within our JS -->
     <!-- https://vuejs.org/v2/guide/events.html -->
     <button class="filter btn btn-reset" @click="reset()">
-      Reset Filters
+      Reiniciar Filtro
     </button>
   </section>
 
@@ -48,7 +57,7 @@
   </section>
 
   <section class="no-items-message" v-else>
-    No items available, please refine your filters.
+    No existen items para esa categoria
   </section>
 </main>
 <!-- partial -->
